[package]
name = "musdel"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.20.0", features = ["derive"] }
device_query = "2.1.0"
enigo = "0.3.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
